// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Logo snapshots renders collapsed view 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: start;
}

.c3 {
  opacity: 0;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
  pointer-events: none;
}

.c1 {
  padding-left: 16px;
  height: 60px;
  width: 36px;
  transition: width 0.5s;
}

.c1 a {
  display: flex;
  align-items: center;
}

.c1 img:first-child {
  margin-right: 8px;
}

.c1 img {
  width: auto;
  height: 32px;
}

<div
    class="c0 c1"
  >
    <a
      data-discover="true"
      href="/applications"
    >
      <img
        src="[object Object]"
      />
    </a>
    <div
      class="c2 c3"
    >
      <a
        data-discover="true"
        href="/applications"
      >
        <img
          src="[object Object]"
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;

exports[`Logo snapshots renders open view 1`] = `
<DocumentFragment>
  .c0 {
  display: flex;
  flex-direction: row;
  align-items: center;
}

.c2 {
  display: flex;
  flex-direction: row;
  align-items: start;
}

.c3 {
  opacity: 1;
  transition: opacity 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;
}

.c1 {
  padding-left: 16px;
  height: 60px;
  width: 180px;
  transition: width 0.5s;
}

.c1 a {
  display: flex;
  align-items: center;
}

.c1 img:first-child {
  margin-right: 8px;
}

.c1 img {
  width: auto;
  height: 32px;
}

<div
    class="c0 c1"
  >
    <a
      data-discover="true"
      href="/applications"
    >
      <img
        src="[object Object]"
      />
    </a>
    <div
      class="c2 c3"
    >
      <a
        data-discover="true"
        href="/applications"
      >
        <img
          src="[object Object]"
        />
      </a>
    </div>
  </div>
</DocumentFragment>
`;
